--- a/ClientApp/app/components/counter/counter.html
+++ b/ClientApp/app/components/counter/counter.html
@@ -1,9 +1,13 @@
 <template>
-    <h1>Counter</h1>
+    <div slot="site">
+        <h1>Counter</h1>
 
-    <p>This is a simple example of an Aurelia component.</p>
+        <p>This is a simple example of an Aurelia component.</p>
 
-    <p>Current count: <strong>${currentCount}</strong></p>
+        <p>Current count:
+            <strong>${currentCount}</strong>
+        </p>
 
-    <button click.delegate="incrementCounter()">Increment</button>
+        <button click.delegate="incrementCounter()">Increment</button>
+    </div>
 </template>
