--- a/ClientApp/app/components/login/login.html
+++ b/ClientApp/app/components/login/login.html
@@ -1,9 +1,11 @@
 <template>
-    <input class="form-control" type="text" name="userName" value.bind="userName">
-    <input class="form-control" type="password" name="password" value.bind="password">
-    <button class="btn btn-primary" click.delegate="login()">Login</button>
+    <div slot="site">
+        <input class="form-control" type="text" name="userName" value.bind="userName">
+        <input class="form-control" type="password" name="password" value.bind="password" keydown.delegate="login()">
+        <button class="btn btn-primary" click.delegate="login()">Login</button>
 
-    <section class="alert alert-danger" if.bind="hasError">
-        ${error}
-    </section>
+        <section class="alert alert-danger" if.bind="hasError">
+            ${error}
+        </section>
+    </div>
 </template>
